// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`indexDataFetcher > counts the amount of deprecated items a groupMarker has 1`] = `
{
  "swift": [
    {
      "childUIDs": [
        365745369,
        -1561138820,
      ],
      "deprecatedChildrenCount": 2,
      "depth": 0,
      "id": "Group Marker",
      "index": 0,
      "parent": "<root>",
      "siblingsCount": 3,
      "title": "Group Marker",
      "type": "groupMarker",
      "uid": -196255993,
    },
    {
      "childUIDs": [
        -1893192488,
        -2046366661,
        -2045443139,
        -2044519617,
      ],
      "deprecated": true,
      "depth": 0,
      "groupMarkerUID": -196255993,
      "id": "Child0",
      "index": 1,
      "parent": "<root>",
      "path": "/documentation/foo/child0",
      "siblingsCount": 3,
      "title": "Child0",
      "type": "article",
      "uid": 365745369,
    },
    {
      "childUIDs": [
        -2046366661,
        -2045443139,
        -2044519617,
      ],
      "deprecatedChildrenCount": 1,
      "depth": 1,
      "id": "Group Marker, Child 0",
      "index": 0,
      "parent": 365745369,
      "siblingsCount": 4,
      "title": "Group Marker, Child 0",
      "type": "groupMarker",
      "uid": -1893192488,
    },
    {
      "childUIDs": [],
      "deprecated": true,
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild0",
      "index": 1,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild0",
      "siblingsCount": 4,
      "title": "Child0_GrandChild0",
      "type": "tutorial",
      "uid": -2046366661,
    },
    {
      "childUIDs": [
        366459535,
      ],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild1",
      "index": 2,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild1",
      "siblingsCount": 4,
      "title": "Child0_GrandChild1",
      "type": "tutorial",
      "uid": -2045443139,
    },
    {
      "childUIDs": [],
      "depth": 2,
      "id": "Child0_GrandChild0_GreatGrandChild0",
      "index": 0,
      "parent": -2045443139,
      "path": "/documentation/foo/child0/grandchild0/greatgrandchild0",
      "siblingsCount": 1,
      "title": "Child0_GrandChild0_GreatGrandChild0",
      "type": "tutorial",
      "uid": 366459535,
    },
    {
      "childUIDs": [],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild2",
      "index": 3,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild2",
      "siblingsCount": 4,
      "title": "Child0_GrandChild2",
      "type": "tutorial",
      "uid": -2044519617,
    },
    {
      "childUIDs": [
        1069111095,
      ],
      "deprecated": true,
      "depth": 0,
      "groupMarkerUID": -196255993,
      "id": "Child1",
      "index": 2,
      "parent": "<root>",
      "path": "/documentation/foo/child1/",
      "siblingsCount": 3,
      "title": "Child1",
      "type": "tutorial",
      "uid": -1561138820,
    },
    {
      "childUIDs": [],
      "depth": 1,
      "id": "Child1_GrandChild0",
      "index": 0,
      "parent": -1561138820,
      "path": "/documentation/foo/child1/grandchild0",
      "siblingsCount": 1,
      "title": "Child1_GrandChild0",
      "type": "method",
      "uid": 1069111095,
    },
  ],
}
`;

exports[`indexDataFetcher > removes the \`beta\` flag from children, if the parent is a \`beta\` 1`] = `
{
  "swift": [
    {
      "childUIDs": [
        365745369,
        -1561138820,
      ],
      "deprecatedChildrenCount": 0,
      "depth": 0,
      "id": "Group Marker",
      "index": 0,
      "parent": "<root>",
      "siblingsCount": 3,
      "title": "Group Marker",
      "type": "groupMarker",
      "uid": -196255993,
    },
    {
      "beta": false,
      "childUIDs": [
        -1893192488,
        -2046366661,
        -2045443139,
        -2044519617,
      ],
      "depth": 0,
      "groupMarkerUID": -196255993,
      "id": "Child0",
      "index": 1,
      "parent": "<root>",
      "path": "/documentation/foo/child0",
      "siblingsCount": 3,
      "title": "Child0",
      "type": "article",
      "uid": 365745369,
    },
    {
      "beta": false,
      "childUIDs": [
        -2046366661,
        -2045443139,
        -2044519617,
      ],
      "deprecatedChildrenCount": 0,
      "depth": 1,
      "id": "Group Marker, Child 0",
      "index": 0,
      "parent": 365745369,
      "siblingsCount": 4,
      "title": "Group Marker, Child 0",
      "type": "groupMarker",
      "uid": -1893192488,
    },
    {
      "childUIDs": [],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild0",
      "index": 1,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild0",
      "siblingsCount": 4,
      "title": "Child0_GrandChild0",
      "type": "tutorial",
      "uid": -2046366661,
    },
    {
      "childUIDs": [
        366459535,
      ],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild1",
      "index": 2,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild1",
      "siblingsCount": 4,
      "title": "Child0_GrandChild1",
      "type": "tutorial",
      "uid": -2045443139,
    },
    {
      "childUIDs": [],
      "depth": 2,
      "id": "Child0_GrandChild0_GreatGrandChild0",
      "index": 0,
      "parent": -2045443139,
      "path": "/documentation/foo/child0/grandchild0/greatgrandchild0",
      "siblingsCount": 1,
      "title": "Child0_GrandChild0_GreatGrandChild0",
      "type": "tutorial",
      "uid": 366459535,
    },
    {
      "childUIDs": [],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild2",
      "index": 3,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild2",
      "siblingsCount": 4,
      "title": "Child0_GrandChild2",
      "type": "tutorial",
      "uid": -2044519617,
    },
    {
      "childUIDs": [
        1069111095,
      ],
      "depth": 0,
      "groupMarkerUID": -196255993,
      "id": "Child1",
      "index": 2,
      "parent": "<root>",
      "path": "/documentation/foo/child1/",
      "siblingsCount": 3,
      "title": "Child1",
      "type": "tutorial",
      "uid": -1561138820,
    },
    {
      "childUIDs": [],
      "depth": 1,
      "id": "Child1_GrandChild0",
      "index": 0,
      "parent": -1561138820,
      "path": "/documentation/foo/child1/grandchild0",
      "siblingsCount": 1,
      "title": "Child1_GrandChild0",
      "type": "method",
      "uid": 1069111095,
    },
  ],
}
`;

exports[`indexDataFetcher > removes the \`beta\` flag from children, if the parent is a \`beta\` 2`] = `
{
  "swift": [
    {
      "childUIDs": [
        365745369,
        -1561138820,
      ],
      "deprecatedChildrenCount": 0,
      "depth": 0,
      "id": "Group Marker",
      "index": 0,
      "parent": "<root>",
      "siblingsCount": 3,
      "title": "Group Marker",
      "type": "groupMarker",
      "uid": -196255993,
    },
    {
      "beta": true,
      "childUIDs": [
        -1893192488,
        -2046366661,
        -2045443139,
        -2044519617,
      ],
      "depth": 0,
      "groupMarkerUID": -196255993,
      "id": "Child0",
      "index": 1,
      "parent": "<root>",
      "path": "/documentation/foo/child0",
      "siblingsCount": 3,
      "title": "Child0",
      "type": "article",
      "uid": 365745369,
    },
    {
      "childUIDs": [
        -2046366661,
        -2045443139,
        -2044519617,
      ],
      "deprecatedChildrenCount": 0,
      "depth": 1,
      "id": "Group Marker, Child 0",
      "index": 0,
      "parent": 365745369,
      "siblingsCount": 4,
      "title": "Group Marker, Child 0",
      "type": "groupMarker",
      "uid": -1893192488,
    },
    {
      "beta": false,
      "childUIDs": [],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild0",
      "index": 1,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild0",
      "siblingsCount": 4,
      "title": "Child0_GrandChild0",
      "type": "tutorial",
      "uid": -2046366661,
    },
    {
      "childUIDs": [
        366459535,
      ],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild1",
      "index": 2,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild1",
      "siblingsCount": 4,
      "title": "Child0_GrandChild1",
      "type": "tutorial",
      "uid": -2045443139,
    },
    {
      "beta": false,
      "childUIDs": [],
      "depth": 2,
      "id": "Child0_GrandChild0_GreatGrandChild0",
      "index": 0,
      "parent": -2045443139,
      "path": "/documentation/foo/child0/grandchild0/greatgrandchild0",
      "siblingsCount": 1,
      "title": "Child0_GrandChild0_GreatGrandChild0",
      "type": "tutorial",
      "uid": 366459535,
    },
    {
      "childUIDs": [],
      "depth": 1,
      "groupMarkerUID": -1893192488,
      "id": "Child0_GrandChild2",
      "index": 3,
      "parent": 365745369,
      "path": "/documentation/foo/child0/grandchild2",
      "siblingsCount": 4,
      "title": "Child0_GrandChild2",
      "type": "tutorial",
      "uid": -2044519617,
    },
    {
      "childUIDs": [
        1069111095,
      ],
      "depth": 0,
      "groupMarkerUID": -196255993,
      "id": "Child1",
      "index": 2,
      "parent": "<root>",
      "path": "/documentation/foo/child1/",
      "siblingsCount": 3,
      "title": "Child1",
      "type": "tutorial",
      "uid": -1561138820,
    },
    {
      "beta": true,
      "childUIDs": [],
      "depth": 1,
      "id": "Child1_GrandChild0",
      "index": 0,
      "parent": -1561138820,
      "path": "/documentation/foo/child1/grandchild0",
      "siblingsCount": 1,
      "title": "Child1_GrandChild0",
      "type": "method",
      "uid": 1069111095,
    },
  ],
}
`;
